# FaciLe

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL.md  MandTemplate.mesh  MassTemplate.mesh  PIPELINE.md  README.md  executable_paths.py.in
docs/: INSTALL.md  USAGE.md
pipeline/: blender_warp.py  cleanIntersections.mlx  createDatabase.py  createMusclesDatabase.py  createSkullsBase.py  explore.py  fakeCSVtoTrueCSV.py  liste.csv  normalize.py  processMandibleAndMasseter.py  processSkull.py  scaleSol.py
projects/ACP/: ACP.m  ACP.py  ACP_jupyter.py  PCA.py  pca.py  readmesh.m  readsol.m  writemesh.m  writesol.m
projects/alignement/: CMakeLists.txt  README.md  icp.py
projects/alignement/ext/: CMakeLists.libICP.txt
projects/alignement/src/: main.cpp
projects/alignement/src/lib/: align.cpp  align.h  mesh.cpp  mesh.h
projects/learning/: ANN_predict.m  ANN_training.m  main.m  random_partition.m
projects/morphing/: CMakeLists.txt  README.md  makefile
projects/morphing/src/: chrono.c  chrono.h  compil.date  libmesh5.c  lplib3.c  minimization.c  morphing.h  morphing_3d.c  solve.c  sparse.c  sparse.h  tools.c
projects/tools/: README.md  applyTransformationMatrix.py  computeDistances.py  createShell.py  fastBoundingMesh.py  fillForMorphing.py  msh.py  pipeline
projects/warping/: CMakeLists.txt  README.md  makefile
projects/warping/demo/: DEFAULT.elas  source.mesh
projects/warping/src/: compil.date  elasti1_3d.c  initialization.c  inout.c  intersection.c  main.c  scalem.c  solve.c  sparse.c  sparse.h  warping.h  wrapping.c  wrapping.h
